# emit_tutorial

./: LICENSE  README.md  bh_mass_spectrum.ipynb  mystyle.mplstyle  pyproject.toml  thejoker_stellar_mass_BH.ipynb
answer_keys/: bh_mass_spectrum_ANSWER_KEY.ipynb  thejoker_stellar_mass_BH_ANSWER_KEY.ipynb
answer_keys/.ipynb_checkpoints/: bh_mass_spectrum_ANSWER_KEY-checkpoint.ipynb  thejoker_stellar_mass_BH_ANSWER_KEY-checkpoint.ipynb
